picture stretched fix

--- a/style.css
+++ b/style.css
@@ -542,7 +542,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 780px;
+    width: 580px;
     height: 700px;
     align-self: center;
   }
